# OpenCascadeLearning

./: CMakeLists.txt  cmakelist.txt  main.cpp
